mongo-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deploy
  labels:
    app: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo-container
          image: mongo
          ports:
          - containerPort: 27017
          volumeMounts:
            - mountPath: /data/db
              name: my-volume
      volumes:
        - name: my-volume
          persistentVolumeClaim:
            claimName: local-mongo-pvc
