service.yml
apiVersion: v1
kind: Service
metadata:
  name: node-service
spec:
  type: NodePort
  selector:
    app: node-project
  ports:
    - port: 80
      targetPort: 3000
