ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
       paths:
       - pathType: Prefix
         path: "/node"
         backend:
           service:
             name: node-service
             port:
               number: 80
